tests/NormalTests/paczka1/fuzzy1/20906540.err
Error in line 6: OYrl3Da3 S947 73,1
Error in line 7: OYrl3Da3 S497 46,0
Error in line 8: OYrl3Da3 S947 51,3
Error in line 10: Sjq S497 23,3
Error in line 26: 2HKVaMP12pS A7 34,4
Error in line 16: lGsU S497 57,0
